@startuml core-domain
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam packageStyle rectangle
skinparam linetype ortho

title Skill Refine - Core Domain (Backend Django Models)

package "shared.db" {
  abstract class UUIDPrimaryKeyModel {
    + id : UUID [PK]
  }
  abstract class TimestampedModel {
    + created_at : DateTime
    + updated_at : DateTime
  }
  abstract class SoftDeleteModel {
    + deleted_at : DateTime?
  }
  abstract class CreatedAtModel {
    + created_at : DateTime
  }
}

package "accounts" {
  class User {
    + id : UUID [PK]
    + email : Text
    + email_verified_at : DateTime?
    + full_name : Text
    + birth_date : Date?
    + status : Char(16)
    + avatar_storage_key : Text?
    + created_at : DateTime
    + updated_at : DateTime
    + deleted_at : DateTime?
  }

  class UserPassword {
    + user_id : UUID [PK, FK]
    + password_hash : Text
    + password_updated_at : DateTime
    + must_change_password : Boolean
  }

  class UserPreferences {
    + user_id : UUID [PK, FK]
    + language : Char(16)
    + theme : Char(16)
    + accent_color : Char(16)
    + email_notifications_enabled : Boolean
    + region : Char(16)?
    + created_at : DateTime
    + updated_at : DateTime
  }

  class AuthIdentity {
    + id : UUID [PK]
    + user_id : UUID [FK]
    + provider : Char(16)
    + provider_user_id : Text?
    + provider_email : Text?
    + last_login_at : DateTime?
    + created_at : DateTime
  }

  class Session {
    + id : UUID [PK]
    + user_id : UUID [FK]
    + refresh_token_hash : Text
    + created_at : DateTime
    + expires_at : DateTime
    + revoked_at : DateTime?
    + ip : GenericIPAddress?
    + user_agent : Text?
    + replaced_by_session_id : UUID?
  }

  class PasswordResetRequest {
    + id : UUID [PK]
    + user_id : UUID [FK]
    + email : Text
    + code_hash : Text
    + created_at : DateTime
    + expires_at : DateTime
    + verified_at : DateTime?
    + consumed_at : DateTime?
    + attempts : Integer
  }

  class EmailConfirmationToken {
    + id : UUID [PK]
    + user_id : UUID [FK]
    + email : Text
    + token_hash : Text
    + created_at : DateTime
    + expires_at : DateTime
    + consumed_at : DateTime?
  }
}

package "resumes" {
  class Resume {
    + id : UUID [PK]
    + user_id : UUID [FK]
    + name : Char(160)
    + status : Char(24)
    + last_step : Char(32)?
    + target_position : Char(160)
    + summary : Text
    + theme_id : Char(64)
    + theme_palette_id : Char(64)?
    + theme_accent_override : Char(16)?
    + theme_secondary_override : Char(16)?
    + score : Integer?
    + created_at : DateTime
    + updated_at : DateTime
    + deleted_at : DateTime?
  }

  class ResumeContact {
    + resume_id : UUID [PK, FK]
    + full_name : Char(160)
    + email : Char(254)
    + phone : Char(32)
    + city : Char(120)
    + country : Char(120)
    + linkedin : Char(255)?
    + portfolio : Char(255)?
    + github : Char(255)?
    + website : Char(255)?
    + created_at : DateTime
    + updated_at : DateTime
  }

  class ResumeVersion {
    + id : UUID [PK]
    + resume_id : UUID [FK]
    + user_id : UUID [FK]
    + version_number : PositiveInteger
    + is_current : Boolean
    + snapshot_json : JSON
    + change_summary_json : JSON
    + score : Integer?
    + created_at : DateTime
    + updated_at : DateTime
  }

  class ResumeExport {
    + id : UUID [PK]
    + resume_id : UUID [FK]
    + user_id : UUID [FK]
    + export_type : Char(16)
    + fingerprint : Char(128)
    + status : Char(16)
    + storage_path : Char(500)
    + file_size_bytes : Integer?
    + error_message : Text
    + metrics_json : JSON
    + started_at : DateTime?
    + finished_at : DateTime?
    + created_at : DateTime
    + updated_at : DateTime
  }
}

package "analysis" {
  class ResumeAnalysis {
    + id : UUID [PK]
    + user_id : UUID [FK]
    + resume_id : UUID [FK]
    + status : Char(16)
    + score : Integer?
    + task_scores : JSON?
    + payload_json : JSON?
    + model_name : Char(80)
    + model_version : Char(40)
    + provider : Char(16)
    + job_description_text : Text?
    + error_message : Text?
    + created_at : DateTime
    + updated_at : DateTime
  }
}

package "audit" {
  class AuditLog {
    + id : UUID [PK]
    + actor_user_id : UUID?
    + subject_user_id : UUID?
    + action : Text
    + created_at : DateTime
    + ip : GenericIPAddress?
    + user_agent : Text?
    + metadata : JSON
  }
}

package "notifications" {
  class Notification {
    + id : UUID [PK]
    + user_id : UUID [FK]
    + type : Char(32)
    + title_key : Char(120)
    + params : JSON
    + is_read : Boolean
    + action_url : Char(500)
    + entity_ref : JSON
    + created_at : DateTime
    + updated_at : DateTime
  }
}

' Inheritance
UUIDPrimaryKeyModel <|-- User
TimestampedModel <|-- User
SoftDeleteModel <|-- User
UUIDPrimaryKeyModel <|-- AuthIdentity
CreatedAtModel <|-- AuthIdentity
UUIDPrimaryKeyModel <|-- Session
UUIDPrimaryKeyModel <|-- PasswordResetRequest
UUIDPrimaryKeyModel <|-- EmailConfirmationToken
UUIDPrimaryKeyModel <|-- Resume
TimestampedModel <|-- Resume
SoftDeleteModel <|-- Resume
TimestampedModel <|-- ResumeContact
UUIDPrimaryKeyModel <|-- ResumeVersion
TimestampedModel <|-- ResumeVersion
UUIDPrimaryKeyModel <|-- ResumeExport
TimestampedModel <|-- ResumeExport
UUIDPrimaryKeyModel <|-- ResumeAnalysis
TimestampedModel <|-- ResumeAnalysis
UUIDPrimaryKeyModel <|-- AuditLog
UUIDPrimaryKeyModel <|-- Notification
TimestampedModel <|-- Notification

' Relationships - User
User "1" -- "0..1" UserPassword : password_record
User "1" -- "0..1" UserPreferences : preferences
User "1" -- "0..*" AuthIdentity : auth_identities
User "1" -- "0..*" Session : sessions
User "1" -- "0..*" PasswordResetRequest : password_reset_requests
User "1" -- "0..*" EmailConfirmationToken : email_confirmation_tokens
User "1" -- "0..*" Resume : resumes
User "1" -- "0..*" ResumeVersion : resume_versions
User "1" -- "0..*" ResumeExport : resume_exports
User "1" -- "0..*" ResumeAnalysis : resume_analyses
User "1" -- "0..*" Notification : notifications

' Relationships - Resume
Resume "1" -- "0..1" ResumeContact : contact
Resume "1" -- "0..*" ResumeVersion : versions
Resume "1" -- "0..*" ResumeExport : exports
Resume "1" -- "0..*" ResumeAnalysis : resume_analyses

@enduml
